# square-color

./: CMakeLists.txt  README.md
data/: debug-tests.sh  debug.sh  profile.sh  run.sh  tests.sh  valgrind.sh
src/: CMakeLists.txt  main.cc
src/lib/: App.cc  App.hh  CMakeLists.txt
src/lib/app/: CMakeLists.txt  PGEApp.cc  PGEApp.hh  PGEApp.hxx  olcPixelGameEngine.h
src/lib/coordinates/: CMakeLists.txt
src/lib/game/: Board.cc  Board.hh  CMakeLists.txt  Game.cc  Game.hh  GameState.cc  GameState.hh
src/lib/ui/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/lib/: CMakeLists.txt
tests/unit/lib/app/: CMakeLists.txt
tests/unit/lib/coordinates/: CMakeLists.txt
